--- a/world/map_gen_demonstration.ipynb
+++ b/world/map_gen_demonstration.ipynb
@@ -69,8 +69,7 @@
     "        return neighbors\n",
     "\n",
     "    def get_size(self) -> Tuple[int, int]:\n",
-    "        return self._height, self._width\n",
-    "    "
+    "        return self._height, self._width"
    ]
   },
   {
@@ -159,6 +158,13 @@
     "# Визуализируем карту\n",
     "visualize_map(game_map, scale=15)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
